change testimonials padding

--- a/style.css
+++ b/style.css
@@ -333,6 +333,8 @@ a {
     border: 1px;
     padding-top: 63.81px;
     padding-bottom: 60.69px;
+    padding-left:82px;
+    padding-right:80.5px;
     border: 2px solid #f1bb6a;
     z-index: 2;
 }
